Test/Nat/NeqZero.expected
Test/Nat/NeqZero.lean:5:2: error: unable to prove goal, either it is false or you need to provide more facts. Here is a potential counter-example:

  x = 0
